# Server

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  CONTRIBUTING.md  README.md  config.ini.example  pyproject.toml  sample.json  test.py
.github/workflows/: deploy.yml
app/: asgi.py  celery.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
app/apis/: auth.py
app/utils/: auth.py  redis.py
app/views/: auth.py  logout.py
assisstant/: __init__.py
billing/: models.py  serializers.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0001_initial_squashed_0005_remove_subscription_valid_till.py  0002_subscription_limits.py  0003_subscriptionwebhookevent.py  0004_subscriptionwebhookevent_event_body.py  0005_remove_subscription_valid_till.py  0006_remove_subscriptionwebhookevent_event_body.py  0007_subscription_customer_details_and_more.py  0008_remove_subscription_subscription_details_and_more.py
client/: models.py  serializers.py  urls.py
client/migrations/: 0001_initial.py  0001_initial_squashed_0009_alter_client_address_alter_client_email_and_more.py  0005_avatar.py  (+9 more)
common/: analytics_plot.py  billing.py  datatable.py  datetime.py  exceptions.py  file_field.py  grouper.py  html_processor.py  issue_filters.py  issue_search.py  paginator.py  permissions.py  responses.py  states.py  utils.py  validators.py  views.py
communication/: __init__.py  email.py  sms.py
config/: config.ini.example
dashboard/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
document/: models.py  serializers.py  urls.py  views.py
iam/: apps.py  enums.py  managers.py  models.py  scripts.py  serializers.py  urls.py  views.py
inbox/: models.py  serializers.py  urls.py
integration/: models.py  serializers.py  urls.py
logs/: __init__.py
mails/: __init__.py  issue_activites_task.py  notification_task.py  project_invitation_task.py
middlewares/: __init__.py
notification/: models.py  serializers.py  tasks.py  urls.py  views.py
project/: models.py  serializers.py  tasks.py  urls.py
scripts/: google.js
seeders/: integration.sql  integration_event.sql  widget.sql
storage/: __init__.py
tag/: models.py
task/: models.py  serializers.py  urls.py
templates/: issue-activity-mail.html
webhook/: asana.py  figma.py  github.py  google.py  jira.py  microsoft.py  paddle.py  razorpay.py  slack.py  trello.py  urls.py
(+264 files in other folders)
