[tool.poetry]
name = "servcy-server"
version = "0.1.0"
description = ""
authors = ["Megham Garg <megham@servcy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
django = "4.2.10"
django-cors-headers = "^3.14.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
boto3 = "^1.26.118"
django-crontab = "^0.7.1"
django-storages = "^1.13.2"
pydantic = "^1.10.7"
mypy = "^1.2.0"
psycopg2 = "^2.9.6"
configparser = "^5.3.0"
django-crum = "^0.7.9"
twilio = "^8.1.0"
django-filter = "^23.1"
gunicorn = "^20.1.0"
serpy = "^0.3.1"
cryptography = "42.0.0"
google-auth = "^2.22.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.97.0"
google-cloud-pubsub = "^2.18.3"
msal = "^1.23.0"
newrelic = "^8.11.0"
slack-sdk = "^3.21.3"
pre-commit = "^3.4.0"
asana = "^3.2.2"
sendgrid = "^6.11.0"
openai = "^1.8.0"
tiktoken = "^0.5.2"
uvicorn = "^0.27.1"
mistune = "^3.0.2"
beautifulsoup4 = "^4.12.3"
celery = "^5.3.6"
redis = "^5.0.2"
django-redis = "^5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.3"
pre-commit = "^3.2.2"
docformatter = "^1.6.0"
docstr-coverage = "^2.3.0"
pylint = "^2.17.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
